custom.css
.bar
{
    padding: 1rem 0rem;
    color: white;
    width: 100%;
    height: auto;
    position: sticky;
    top: 0;
}
html
{
    scroll-behavior: smooth;
}
.sticky
{
    position: sticky;
    width: 100%;
    top: 0;
}
#navBar 
{
    padding: 0px;
    width: 100%;
    text-align: center;
    overflow: hidden;
}
#navBar *
{
    font-size: clamp(10px, 1vw, 100000px);
    display: inline-block;
}
#navBarButton:hover
{
    color: #e0876a;
}
.header
{
    padding-top: 30px;
    padding-bottom: 20px;
    width:auto;
    height: auto;
}
.topHeader
{
    text-align: center;
    margin: 0;
}

#topBar *
{
    text-decoration: none;
    color: #f9ccac;
    
}
li
{
    list-style-type: none;
    padding-left: 5%;
    padding-right: 5%;

}
body
{
    font-family: 'Roboto', sans-serif;
    margin: 0px;
    padding-top: 0;
    background: linear-gradient(to right, #141e30, #243b55);
    background-repeat:no-repeat ;
    color: #fbefcc;
    text-align: center;
}
.bodysmall
{
    padding-left: 15%;
    padding-right: 15%; 
}
a
{
    color: #fbefcc;
}
a:hover
{
    color: #e0876a;
}
a:active
{
    color: #fbefcc;
}
.header
{
    color:#f9ccac;
}
.sub_header
{
    color: #e0876a;
}
.swiper
{
    width: 80%;
    height: fit-content;
}
.swiper-slide img
{
    width: 100%;
    height: min-content;
}
.setup img
{
    width: 80%;
    height: auto;
}
.link_about_me
{
    font-size: 110%;
}
.about
{
    font-size: 110%;
}
.last
{
    padding-top: 10%;
}
.link_project img
{
    width: 70%;
    height: auto;
}
.card-group
{
    position: absolute;
    transition: transform 400ms ease;
}
.card-group[data-status="unknown"]
{
    transform: scale(0);
}
.card-group[data-status="active"] 
{
    transition-delay: 300ms;
}
.card-group[data-status="after"]
{
    transform: translateX(50%) scale(0);
}
.card-group[data-status="before"] 
{
    transform: translateX(-50%) scale(0);
}
.card-group[data-status="becoming-active-from-after"] 
{
    transform: translateX(50%) scale(0);
    transition: none;
}
  
.card-group[data-status="becoming-active-from-before"] 
{
    transform: translateX(-50%) scale(0);
    transition: none;
}
.card-groups,
.card-group,
.card
{
    aspect-ratio: 5 / 7;
}
.card-groups,
.card-group,
.big-card
{
    width: 30vmin;
}
.card-groups
{
    padding-left: 38.8%;
    padding-top: 4%;
}
.card
{
    background-color: rgba(255, 255, 255, 0.05);
    position: absolute;
    transition: transform 800ms cubic-bezier(.05, .43, .25, .95);
}
.big-card
{
    width: 30vmin;
    border-radius: 1vmin;
}
.little-card
{
    width: 12vmin;
    border-radius: 2vmin;
    left: 50%;
    transform: translate(-50%, -50%);
    top: 50%;
}
/*yuuka*/
.card-group[data-index="0"] > .little-card:nth-child(1)
{
    background-image: url(Yuuka\ card/Sport\ Yuuka4.png);
    background-size: cover;
}
.card-group[data-index="0"] > .big-card:nth-child(2)
{
    transform: translateX(-10%) rotate(-1deg);
    background-image: url(Yuuka\ card/Normal\ Yuuka2.png);
    background-size: cover;
}
.card-group[data-index="0"] > .little-card:nth-child(3)
{
    background-image: url(Yuuka\ card/Sport\ Yuuka3.png);
    background-size: cover;
}
.card-group[data-index="0"] > .big-card:nth-child(4)
{
    transform: rotate(2deg);
    background-image: url(Yuuka\ card/Normal\ Yuuka1.png);
    background-size: cover;
}
.card-group[data-index="0"] > .little-card:nth-child(5)
{
    background-image: url(Yuuka\ card/Normal\ Yuuka4.png);
    background-size: cover;
}
.card-group[data-index="0"] > .big-card:nth-child(6)
{
    transform: translateX(-6%) rotate(-3deg);
    background-image: url(Yuuka\ card/Sport\ Yuuka2.png);
    background-size: cover;
}
.card-group[data-index="0"] > .little-card:nth-child(7)
{
    background-image: url(Yuuka\ card/Normal\ Yuuka3.png);
    background-size: cover;
}
.card-group[data-index="0"] > .big-card:nth-child(8)
{
    transform: translate(10%, 3%) rotate(5deg);
    background-image: url(Yuuka\ card/Sport\ Yuuka1.png);
    background-size: cover;
}

/*hoshino*/
.card-group[data-index="1"] > .little-card:nth-child(1)
{
    background-image: url(Hoshino\ card/HoshinoS3.png);
    background-size: cover;
}
.card-group[data-index="1"] > .big-card:nth-child(2)
{
    transform: translateX(-10%) rotate(-1deg);
    background-image: url(Hoshino\ card/Hoshino4.png);
    background-size: cover;
}
.card-group[data-index="1"] > .little-card:nth-child(3)
{
    background-image: url(Hoshino\ card/HoshinoS2.png);
    background-size: cover;
}
.card-group[data-index="1"] > .big-card:nth-child(4)
{
    transform: rotate(2deg);
    background-image: url(Hoshino\ card/Hoshino1.png);
    background-size: cover;
}
.card-group[data-index="1"] > .little-card:nth-child(5)
{
    background-image: url(Hoshino\ card/Hoshino2.png);
    background-size: cover;
}
.card-group[data-index="1"] > .big-card:nth-child(6)
{
    transform: translateX(-6%) rotate(-3deg);
    background-image: url(Hoshino\ card/HoshinoS4.png);
    background-size: cover;
}
.card-group[data-index="1"] > .little-card:nth-child(7)
{
    background-image: url(Hoshino\ card/Hoshino3.png);
    background-size: cover;
}
.card-group[data-index="1"] > .big-card:nth-child(8)
{
    transform: translate(10%, 3%) rotate(5deg);
    background-image: url(Hoshino\ card/HoshinoS1.png);
    background-size: cover;
}

/*shun*/
.card-group[data-index="2"] >.little-card:nth-child(1)
{
    background-image: url(Shun\ card/Lshun4.png);
    background-size: cover;
}
.card-group[data-index="2"] >.big-card:nth-child(2)
{
    transform: translateX(-10%) rotate(-1deg);
    background-image: url(Shun\ card/Shun3.png);
    background-size: cover;
}
.card-group[data-index="2"] >.little-card:nth-child(3)
{
    background-image: url(Shun\ card/Lshun3.png);
    background-size: cover;
}
.card-group[data-index="2"] >.big-card:nth-child(4)
{
    transform: rotate(2deg);
    background-image: url(Shun\ card/Shun1.png);
    background-size: cover;
}
.card-group[data-index="2"] >.little-card:nth-child(5)
{
    background-image: url(Shun\ card/Shun4.png);
    background-size: cover;
}
.card-group[data-index="2"] >.big-card:nth-child(6)
{
    transform: translateX(-6%) rotate(-3deg);
    background-image: url(Shun\ card/Lshun2.png);
    background-size: cover;
}
.card-group[data-index="2"] >.little-card:nth-child(7)
{
    background-image: url(Shun\ card/Shun2.png);
    background-size: cover;
}
.card-group[data-index="2"] >.big-card:nth-child(8)
{
    transform: translate(10%, 3%) rotate(5deg);
    background-image: url(Shun\ card/Lshun1.png);
    background-size: cover;
}

/*azusa*/
.card-group[data-index="3"] >.little-card:nth-child(1)
{
    background-image: url(Azusa\ card/AzusaS2.png);
    background-size: cover;
}
.card-group[data-index="3"] >.big-card:nth-child(2)
{
    transform: translateX(-10%) rotate(-1deg);
    background-image: url(Azusa\ card/Azusa2.png);
    background-size: cover;
}
.card-group[data-index="3"] >.little-card:nth-child(3)
{
    background-image: url(Azusa\ card/AzusaS4.png);
    background-size: cover;
}
.card-group[data-index="3"] >.big-card:nth-child(4)
{
    transform: rotate(2deg);
    background-image: url(Azusa\ card/Azusa1.png);
    background-size: cover;
}
.card-group[data-index="3"] >.little-card:nth-child(5)
{
    background-image: url(Azusa\ card/Azusa3.png);
    background-size: cover;
}
.card-group[data-index="3"] >.big-card:nth-child(6)
{
    transform: translateX(-6%) rotate(-3deg);
    background-image: url(Azusa\ card/AzusaS3.png);
    background-size: cover;
}
.card-group[data-index="3"] >.little-card:nth-child(7)
{
    background-image: url(Azusa\ card/Azusa4.png);
    background-size: cover;
}
.card-group[data-index="3"] >.big-card:nth-child(8)
{
    transform: translate(10%, 3%) rotate(5deg);
    background-image: url(Azusa\ card/AzusaS1.png);
    background-size: cover;
}
.card-group:hover > .big-card:nth-child(2)
{
    transform: translate(-75%,16%) rotate(-24deg);
}
.card-group:hover > .big-card:nth-child(4)
{
    transform: translate(-25%,8%) rotate(-8deg);
}
.card-group:hover > .big-card:nth-child(6)
{
    transform: translate(25%,8%) rotate(8deg);
}
.card-group:hover > .big-card:nth-child(8)
{
    transform: translate(75%,16%) rotate(24deg);
}
.card-group:hover > .little-card:nth-child(1)
{
    transform: translate(200%,-160%) rotate(-15deg);
}
.card-group:hover > .little-card:nth-child(3)
{
    transform: translate(160%,170%) rotate(15deg);
}
.card-group:hover > .little-card:nth-child(5)
{
    transform: translate(-200%,-170%) rotate(15deg);
}
.card-group:hover > .little-card:nth-child(7)
{
    transform: translate(-280%,140%) rotate(-15deg);
}
.card-swiper-buttons
{
    margin-top: 8vmin;
    display: flex;
    justify-content: space-around;
    padding: 0vmin 55vmin;
}
.card-swiper-buttons > button
{
    font-size: 6vmin;
    border: transparent;
    color:white;
    background-color: transparent;
    cursor: pointer;
}

